--- a/Webmp4/ClientApp/public/index.html
+++ b/Webmp4/ClientApp/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"
+    />
     <meta name="format-detection" content="telephone=no" />
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
